--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,8 @@ h1 {
     background-color: #2980b9;
 }
 
-.color-picker {
+.color-picker,
+.thickness-control {
     display: flex;
     align-items: center;
     gap: 5px;
@@ -117,6 +118,41 @@ h1 {
 
 .mini-btn:hover {
     background-color: #e9ecef;
+}
+
+/* Line thickness control */
+.thickness-control input[type="range"] {
+    width: 80px;
+    height: 7px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #e9ecef;
+    outline: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.thickness-control input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #3498db;
+    border-radius: 50%;
+    border: none;
+}
+
+.thickness-control input[type="range"]::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    background: #3498db;
+    border-radius: 50%;
+    border: none;
+}
+
+.thickness-control span {
+    font-size: 0.85rem;
+    min-width: 35px;
 }
 
 canvas {
